--- a/01_data preprocessing/01-jieba分词.ipynb
+++ b/01_data preprocessing/01-jieba分词.ipynb
@@ -205,7 +205,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "DL",
+   "display_name": "NLP",
    "language": "python",
    "name": "python3"
   },
@@ -219,7 +219,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.1"
+   "version": "3.10.13"
   }
  },
  "nbformat": 4,
