--- a/01_data preprocessing/02-词性标注.ipynb
+++ b/01_data preprocessing/02-词性标注.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -20,7 +20,7 @@
      "text": [
       "Building prefix dict from the default dictionary ...\n",
       "Loading model from cache C:\\Users\\19981\\AppData\\Local\\Temp\\jieba.cache\n",
-      "Loading model cost 0.437 seconds.\n",
+      "Loading model cost 0.448 seconds.\n",
       "Prefix dict has been built successfully.\n"
      ]
     },
@@ -41,7 +41,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "DL",
+   "display_name": "NLP",
    "language": "python",
    "name": "python3"
   },
@@ -55,7 +55,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.1"
+   "version": "3.10.13"
   }
  },
  "nbformat": 4,
