--- a/01_data preprocessing/01-jieba分词.ipynb
+++ b/01_data preprocessing/01-jieba分词.ipynb
@@ -18,14 +18,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Building prefix dict from the default dictionary ...\n",
+      "Loading model from cache C:\\Users\\19981\\AppData\\Local\\Temp\\jieba.cache\n"
+     ]
+    },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "<generator object Tokenizer.cut at 0x0000022E6F356560>\n",
+      "<generator object Tokenizer.cut at 0x0000018EC1DC1770>\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Loading model cost 0.412 seconds.\n",
+      "Prefix dict has been built successfully.\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
       "['村人到', '教堂', '去', '做礼拜', '，', '发现', '路旁', '坐', '着', '一个', '手艺人', '。']\n"
      ]
     }
@@ -43,7 +65,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -68,7 +90,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -95,7 +117,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -107,7 +129,7 @@
     }
    ],
    "source": [
-    "# 在精确模式基础上，对长词进行再次切分\n",
+    "# 在精确模式基础上，对长词进行再次切分 用于搜索引擎构建倒排索引的分词方法\n",
     "content = \"村人到教堂去做礼拜，发现路旁坐着一个手艺人。\"\n",
     "result = jieba.cut_for_search(content)\n",
     "print(result)"
